# weknora-mcp-server

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
docs/: EXAMPLES.md  INSTALL.md  MCP_CONFIG.md  PROJECT_SUMMARY.md
docs/superpowers/specs/: 2026-06-15-readonly-typing-refactor-design.md
src/weknora_mcp_server/: __init__.py  _client.py  main.py  run.py  weknora_mcp_server.py
src/weknora_mcp_server/_types/: openapi.json  responses.py  weknora.py
tests/: test_fastmcp.py  test_imports.py  test_module.py
